...
              style: tt.bodyLarge!.copyWith(color: c.text3),
              textAlign: TextAlign.center,
            ),
            Gap(AppSpacing.lg.h),
            SizedBox(
              width: 200.w,
              child: JButton(label: 'CLEAR FILTERS', onPressed: onClear),
            ),
          ],
        ),
      ),
    );
  }
...
