...
              padding: EdgeInsets.fromLTRB(4.w, AppSpacing.sm.h, 20.w, 12.h),
              child: Row(
                children: [
                  BackButton(color: c.text1, onPressed: () => context.pop()),
                  Expanded(
                    child: Text(
                      'Job Details',
                      style: tt.headlineSmall!.copyWith(
                        fontSize: 24,
                        height: 1.2,
                        color: c.text1,
                      ),
                    ),
...
